# SimplifedProject

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  Ready_spiffs.c  Ready_spiffs.h  enc28j60.h  enc_init.c  enc_init.h  esp_eth_mac_enc28j60.c  esp_eth_phy_enc28j60.c  funcs.c  funcs.h  lcd.c  lcd.h  my_gpio.c  my_gpio.h  rtc_i2c.c  rtc_i2c.h  serviceFn.c  serviceFn.h  uart0_computer.c  uart0_computer.h  uart1_scanner.c  uart1_scanner.h  uart2_printer.c  uart2_printer.h  uart_echo_example_main.c
